--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     }
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.2",
+    "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
-    "@nuxtjs/dotenv": "^1.4.0"
+    "github-markdown-css": "^4.0.0",
+    "nuxt": "^2.0.0",
+    "nuxt-buefy": "^0.3.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
